# SmartDocPoC

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cli/: main.py
core/: extractor_old.py  html.py  markdown.py  pdf.py
core/extractor/: __init__.py  django_extractor.py  fastapi_extractor.py  flask_extractor.py
sample_app/: main.py
sample_django/: main.py
sample_flask/: main.py
